# divine-clips

./: DIVINE_CLIPS_PROMPT.md  docker-compose.yml
.github/workflows/: ci.yml
clipcrate/: Cargo.toml  Dockerfile
clipcrate/clickhouse-migrations/: 002_clickhouse_schema.sql
clipcrate/clipcrate/: Cargo.toml
clipcrate/clipcrate/src/: main.rs
clipcrate/crates/api/: Cargo.toml
clipcrate/crates/api/src/: analytics.rs  auth.rs  auto_campaigns.rs  campaigns.rs  dashboard.rs  error.rs  feed.rs  funding.rs  internal.rs  leaderboard.rs  lib.rs  notifications.rs  submissions.rs  wallet.rs
clipcrate/crates/cashu/: Cargo.toml
clipcrate/crates/cashu/src/: cashu_wallet.rs  lib.rs  mint.rs  wallet.rs
clipcrate/crates/cashu/tests/: e2e_cashu.rs
clipcrate/crates/db/: Cargo.toml
clipcrate/crates/db/src/: clickhouse.rs  lib.rs  models.rs  postgres.rs
clipcrate/crates/nostr_events/: Cargo.toml
clipcrate/crates/nostr_events/src/: campaign.rs  lib.rs  payout.rs  publisher.rs  submission.rs
clipcrate/crates/platform-apis/: Cargo.toml
clipcrate/crates/platform-apis/src/: instagram.rs  lib.rs  tiktok.rs  twitter.rs  youtube.rs
clipcrate/crates/trust/: Cargo.toml
clipcrate/crates/trust/src/: fraud.rs  lib.rs
clipcrate/migrations/: 001_initial_schema.sql  003_campaign_funding.sql  004_auto_campaigns.sql  005_push_subscriptions.sql
clips-verifier/: package-lock.json  package.json  tsconfig.json  wrangler.toml
clips-verifier/src/: clipcrate-client.ts  fraud.ts  index.ts  phyllo.ts
clips-verifier/test/: fraud.test.ts  instagram.test.ts  tiktok.test.ts  x.test.ts  youtube.test.ts
clips-web/: .env.production  README.md  package-lock.json  package.json
clips-web/src/lib/: api.ts  auth.ts  nostr.ts  push.ts  types.ts  utils.ts
clips-web/src/lib/components/: VideoCard.svelte
clips-web/src/lib/components/charts/: AxisX.svelte  AxisY.svelte  Line.svelte  ViewsChart.svelte
clips-web/src/lib/stores/: auth.ts  feed.ts
clips-web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
clips-web/src/routes/auth/callback/: +page.svelte
clips-web/src/routes/campaigns/: +page.svelte  +page.ts
clips-web/src/routes/campaigns/[id]/: +page.svelte  +page.ts
clips-web/src/routes/create/: +page.svelte
clips-web/src/routes/dashboard/: +page.svelte
clips-web/src/routes/dashboard/analytics/: +page.svelte
clips-web/src/routes/guide/: +page.svelte
clips-web/src/routes/leaderboard/: +page.svelte
clips-web/src/routes/profile/: +page.svelte
clips-web/src/routes/submit/: +page.svelte
clips-web/src/routes/wallet/: +page.svelte
clips-web/static/: sw.js
docs/superpowers/plans/: 2026-04-06-clipcrate-backend.md  2026-04-06-sveltekit-frontend.md  2026-04-07-clips-v2-features.md  2026-04-07-clips-v2-research.md  2026-04-07-mvp-completion.md  2026-04-07-production-fixes.md
docs/superpowers/specs/: 2026-04-06-divine-clips-design.md  2026-04-07-clips-v2-research-findings.md  2026-04-07-real-cashu-wallet-design.md
