[package]
name = "clipcrate"
version = "0.1.0"
edition = "2021"
description = "DiVine Clips backend server"

[[bin]]
name = "clipcrate"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clipcrate-api = { workspace = true }
clipcrate-db = { workspace = true }
clipcrate-nostr = { workspace = true }
clipcrate-cashu = { workspace = true }
clipcrate-trust = { workspace = true }
clipcrate-platform-apis = { workspace = true }
sqlx = { workspace = true, features = ["migrate"] }
