[package]
name = "clipcrate-api"
version = "0.1.0"
edition = "2021"
description = "Campaign and submission REST API handlers"

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clipcrate-db = { workspace = true }
clipcrate-nostr = { workspace = true }
clipcrate-cashu = { workspace = true }
clipcrate-trust = { workspace = true }
