[package]
name = "clipcrate-cashu"
version = "0.1.0"
edition = "2021"
description = "Cashu mint integration for payments"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
