[package]
name = "clipcrate-cashu"
version = "0.1.0"
edition = "2021"
description = "Cashu wallet integration for payments"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
cdk = { version = "0.16", default-features = false, features = ["wallet"] }
cdk-sqlite = { version = "0.16", default-features = false, features = ["wallet"] }
getrandom = "0.3"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true }
getrandom = "0.3"
