[package]
name = "clipcrate-trust"
version = "0.1.0"
edition = "2021"
description = "Graduated trust system and fraud detection"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
governor = { workspace = true }
futures = { workspace = true }
clipcrate-db = { workspace = true }
